--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -94,7 +94,7 @@
     width: 100%;
     height: auto;
     background-color: #2d2d2d;
-
+    
 }
 
 .container-lista-filmes {
@@ -137,4 +137,5 @@
     float: right;
     align-items: center;
     margin-right: 2rem;
+    color: #fff;
 }
