--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-around;
     z-index: 2;
-    position: absolute;
+    background-color: #2d2d2d;
 }
 
 .logo {
