--- a/src/Pages/Filme/filme.css
+++ b/src/Pages/Filme/filme.css
@@ -1,97 +1,139 @@
 .filme-info {
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .filme-info .poster {
-    width: 300px;
-    box-shadow: 5px 5px 10px;
-    border-radius: 10px;
+  width: 300px;
+  max-height: 350px;
+  box-shadow: 5px 5px 10px;
+  border-radius: 10px;
 }
 
-
 .background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    object-fit: cover;
-
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  object-fit: cover;
 }
 
 .btn-area {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .btn-area a {
-    width: 100px;
-    border: none;
-    background-color: rgb(226, 51, 51);
-    color: white;
-    font-size: 15px;
-    cursor: pointer;
-    transition: 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    padding: 10px;
+  width: 100px;
+  border: none;
+  background-color: rgb(226, 51, 51);
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 10px;
 }
 
 .btn-area a:hover {
-    background-color: rgb(149, 33, 33);
+  background-color: rgb(149, 33, 33);
 }
 
 .Salvar {
-    width: 100px;
-    border: none;
-    background-color: rgb(226, 51, 51);
-    color: white;
-    font-size: 15px;
-    cursor: pointer;
-    transition: 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    padding: 10px;
+  width: 100px;
+  border: none;
+  background-color: rgb(226, 51, 51);
+  color: white;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 10px;
 }
 
 .Salvar:hover {
-    background-color: rgb(149, 33, 33);
+  background-color: rgb(149, 33, 33);
 }
 
 .box-info-filme {
-    width: 90%;
-    display: flex;
-    gap: 20px;
-    text-shadow: 5px 5px 10px black;
-
+  width: 90%;
+  display: flex;
+  gap: 20px;
+  text-shadow: 5px 5px 10px black;
 }
 
 .info-text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 80%;
-    color: white;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 80%;
+  color: white;
+  gap: 20px;
 }
 
 .info-text h3 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .info-text span {
-    line-height: 24px;
+  line-height: 24px;
 }
 
 #diretorres {
-    color: #fff;;
-    font-weight: 800;
+  color: #fff;
+  font-weight: 800;
+}
+
+.boxVideo {
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.boxCategorias{
+  width: 100%;
+  padding-left: 20px;
+}
+
+@media (max-width: 500px) {
+  .box-info-filme {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .background {
+    top: 0;
+    z-index: 10;
+    height: 110%;
+  }
+
+  .boxVideo {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    margin-top: 1rem;
+  }
+
+  .box-info-filme {
+    width: 100%;
+  }
+  .info-text{
+    margin-top: 4rem;
+    background-color: #2d2d2d;
+    width: 100% !important;
+    padding: 10px;
+  }
+
 }
