--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -63,3 +63,12 @@
     cursor: pointer;
 
 }
+
+@media(max-width:500px){
+    .login-area-user{
+        display: none;
+    }
+    .btn-area-header button{
+        font-size: 15px;
+    }
+}
