--- a/src/Pages/Favoritos/favoritos.css
+++ b/src/Pages/Favoritos/favoritos.css
@@ -1,26 +1,27 @@
 .meus-filmes{
     width: 100%;
+    min-height: 100vh;
     align-items: center;
+    background-color: #2d2d2d;
 }
 .title{
     width: 100%;
     text-align: center;
 }
-.meus-filmes h1{
-    color: white;
-    margin-bottom: 1rem;
-}
 
 .imgposter2{
-    width: 100px;
-    height: 150px;
+    max-width: 200px;
 }
 
 .box-info{
     display: flex;
+    flex-direction: column;
     align-items: flex-end;
     gap: 10px;
     margin-bottom: 20px;
+}
+.box-info span{
+    color: #fff;
 }
 .btn-area2{
     display: flex;
