--- a/src/Pages/Favoritos/favoritos.css
+++ b/src/Pages/Favoritos/favoritos.css
@@ -1,35 +1,41 @@
-.meus-filmes{
+.meus-filmes {
     width: 100%;
     min-height: 100vh;
     align-items: center;
     background-color: #2d2d2d;
 }
-.title{
+
+.title {
     width: 100%;
     text-align: center;
 }
 
-.imgposter2{
-    max-width: 200px;
+.imgposter2 {
+    max-width: 100px;
 }
 
-.box-info{
+.box-info {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     gap: 10px;
     margin-bottom: 20px;
 }
-.box-info span{
+
+.box-info span {
     color: #fff;
 }
-.btn-area2{
+
+.btn-area2 {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
+    position: absolute;
+    right: 10%;
 }
-.btn-area2 button{
+
+.btn-area2 button {
     width: 100px;
     padding: 10px;
     border: none;
@@ -37,16 +43,30 @@
     background-color: #116feb;
     cursor: pointer;
 }
-.btn-area2 a{
+
+.btn-area2 a {
     color: white;
 }
 
-.item{
-    width: 100%;
+.item {
+    width: 80%;
     padding-top: 15px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    padding-left: 2rem;
+    position: relative;
+}
+
+.hr {
+    width: 80%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    opacity: 0.4;
+}
+
+@media(max-width:500px) {
+    .item {
+        width: 100%;
+    }
 }
