--- a/src/Pages/Filme/filme.css
+++ b/src/Pages/Filme/filme.css
@@ -100,6 +100,7 @@
   padding: 10px;
   display: flex;
   justify-content: center;
+  gap: 10px;
 }
 
 
@@ -121,6 +122,9 @@
     height: auto;
     padding: 10px;
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .box-info-filme {
