--- a/src/Pages/Serie/filme.css
+++ b/src/Pages/Serie/filme.css
@@ -92,6 +92,22 @@
 }
 
 #diretorres {
-    color: #fff;;
+    color: #fff;
+    ;
     font-weight: 800;
+}
+
+.selectSeasonandEp {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.selectSeasonandEp select {
+    min-width: 200px;
+    height: 30px;
+    border: 0;
+    border-radius: 10px;
+    
 }
