--- a/src/Pages/Filmes/style.css
+++ b/src/Pages/Filmes/style.css
@@ -45,34 +45,43 @@
     justify-content: center;
 }
 
-.boxCategorias input {
+.inputSearch {
+    padding: 0 10px 0 10px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    display: flex;
     height: 35px;
+    align-items: center;
     padding-left: 10px;
+}
+
+.boxCategorias input {
+    height: 100%;
+    width: 100%;
     outline: none;
-    color: #2d2d2d;
+    color: #fff;
     border-radius: 10px;
     border: 0;
+    background-color: transparent;
 }
-
-.boxCategorias button {
-    padding: 10px;
-    background-color: red;
+.boxCategorias input::placeholder{
     color: #fff;
-    font-weight: 600;
-    border-radius: 10px;
-    transition: 0.3s ease;
+}
+.boxCategorias button {
+    background-color: transparent;
 }
 
-.boxCategorias button:hover {
-    background-color: rgb(250, 117, 117);
-}
 
 .boxCategorias select {
-    border: 0;
-    background-color: #fff;
-    color: #2d2d2d;
+    border: 1px solid grey;
+    background-color: transparent;
+    color: #fff;
     outline: none;
     border-radius: 10px;
+}
+
+.boxCategorias select option {
+    background-color: #2d2d2d;
 }
 
 @media(max-width:500px) {
@@ -84,8 +93,9 @@
     .item-filme {
         max-width: 170px;
     }
-    .boxCategorias{
+
+    .boxCategorias {
         padding-left: 0;
     }
-    
+
 }
