--- a/src/Pages/Filme/filme.css
+++ b/src/Pages/Filme/filme.css
@@ -102,9 +102,27 @@
   display: flex;
   justify-content: center;
   gap: 10px;
+  flex-direction: column;
 }
 
-
+.boxPlayers{
+  color: #fff;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.boxPlayers button{
+  width: auto;
+  padding: 10px;
+  height: 30px;
+  background-color: red;
+  color: #fff;
+  font-size: 17px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media (max-width: 500px) {
   .box-info-filme {
