--- a/src/Pages/Serie/serie.css
+++ b/src/Pages/Serie/serie.css
@@ -105,7 +105,7 @@
 }
 
 .selectSeasonandEp select {
-    min-width: 200px;
+    max-width: 200px;
     height: 30px;
     border: 0;
     border-radius: 10px;
