--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,5 @@
+
+
 .header {
     width: 100%;
     height: 70px;
@@ -5,11 +7,11 @@
     align-items: center;
     justify-content: space-around;
     z-index: 2;
-    background-color: #2d2d2d;
 }
 
 .logo {
     text-align: center;
+    cursor: pointer;
 }
 
 .logo h2 {
