--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,179 +1,202 @@
 .container-home {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .section-1 {
-    width: 100%;
-    height: 100vh;
-    background-color: #2d2d2d;
-    z-index: 1;
-    object-fit: cover;
-    background-size: cover;
-    position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: #2d2d2d;
+  z-index: 1;
+  object-fit: cover;
+  background-size: cover;
+  position: absolute;
+}
+
+.containersection1banners {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  justify-content: space-evenly;
 }
 
 .title {
-    position: absolute;
-    left: 100px;
-    top: 200px;
-    width: auto !important;
-
+  display: none;
 }
 
 .title h1 {
-    color: rgb(226, 51, 51);
-    font-weight: 800;
-    font-size: 40px;
-    background-color: #2d2d2dd4;
-    padding: 4px;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
+  color: rgb(226, 51, 51);
+  font-weight: 800;
+  font-size: 40px;
+  background-color: #2d2d2dd4;
+  padding: 4px;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
 }
 
 .banner-filme-cartaz {
-    position: absolute;
-    right: 100px;
-    top: 150px;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-
-
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 .banner-filme-cartaz img {
-    width: 300px;
-    border-radius: 10px;
-    cursor: pointer;
+  width: 300px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .title-fime-cartaz {
-    position: absolute;
-    left: 100px;
-    top: 270px;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 10px;
-
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 .title-fime-cartaz h3 {
-    color: #fff;
+  color: #fff;
 }
 
 .title-fime-cartaz h1 {
-    color: #fff;
-    font-weight: 800;
-    font-size: 40px;
-    padding: 4px;
-    background-color: #2d2d2d88;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
+  color: #fff;
+  font-weight: 800;
+  font-size: 40px;
+  padding: 4px;
+  background-color: #2d2d2d88;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
 }
 
 .title-fime-cartaz a,
 .title-fime-cartaz button {
-    border: 0;
-    outline: none;
-    text-decoration: none;
-    color: #2d2d2d;
-    background-color: rgb(226, 51, 51);
-    font-size: 17px;
-    padding: 10px;
+  border: 0;
+  outline: none;
+  text-decoration: none;
+  color: #2d2d2d;
+  background-color: rgb(226, 51, 51);
+  font-size: 17px;
+  padding: 10px;
 }
 
 .btns-filme-cartaz {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .section2 {
-    width: 100%;
-    height: auto;
-    background-color: #2d2d2d;
-    margin-top: calc(100vh - 70px);
+  width: 100%;
+  height: auto;
+  background-color: #2d2d2d;
+  margin-top: calc(100vh - 70px);
 }
 
 .container-lista-filmes {
-    width: 100%;
-    height: auto;
-    display: flex;
-    overflow-x: auto;
-    gap: 10px;
-    margin-bottom: 10px;
-    padding: 0 10px 0 10px;
+  width: 100%;
+  height: auto;
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+  margin-bottom: 10px;
+  padding: 0 10px 0 10px;
 }
 
 .item-filme {
-    width: 250px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 250px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .item-filme img {
-    width: 100%;
-    cursor: pointer;
+  width: 100%;
+  cursor: pointer;
 }
 
-
 .btnPage {
-    width: 30px;
-    height: 30px;
-    background-color: red;
-    color: #fff;
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  color: #fff;
 }
 
 #boxPagination {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 50%;
-    height: 100px;
-    gap: 10px;
-    overflow-x: hidden;
-    float: right;
-    align-items: center;
-    margin-right: 2rem;
-    color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 50%;
+  height: 100px;
+  gap: 10px;
+  overflow-x: hidden;
+  float: right;
+  align-items: center;
+  margin-right: 2rem;
+  color: #fff;
 }
 
 .blurImage {
-    width: 100%;
-    height: 100px;
-    position: absolute;
-    background: linear-gradient(to bottom, #5a5a5a00, #2f2f2f21, #2d2d2d);
-    bottom: 0;
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  background: linear-gradient(to bottom, #5a5a5a00, #2f2f2f21, #2d2d2d);
+  bottom: 0;
 }
 
-@media(max-width:500px) {
-    .banner-filme-cartaz img {
-        width: 200px;
-    }
+@media (max-width: 500px) {
+  .banner-filme-cartaz img {
+    width: 200px;
+  }
 
-    .banner-filme-cartaz {
-        bottom: 200px;
-        top: auto;
-        left: 50px;
-    }
+  .title-fime-cartaz {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .title-fime-cartaz {
-        left: 50px;
-        top: 170px;
-    }
+  .btns-filme-cartaz {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .title {
-        left: 50px;
-        top: 100px;
-    }
+  .banner-filme-cartaz {
+    position: inherit;
+    top: auto;
+    left: auto;
+  }
 
-    .title-fime-cartaz h1 {
-        font-size: 20px;
-    }
+  .title-fime-cartaz h1 {
+    font-size: 20px;
+  }
+
+  .containersection1banners {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .title h1 {
+    font-size: 20px;
+  }
+
+  .title {
+    margin-top: 15px;
+  }
+
+  .title-fime-cartaz a,
+  .title-fime-cartaz button {
+    width: ;
+  }
 }
