--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -70,12 +70,29 @@
 
 .userinfo {
     color: #fff;
-    font-size: 17px ;
+    font-size: 17px;
+    display: flex;
+    gap: 10px;
 }
-#sair{
+
+.userinfo label {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+#sair {
     background-color: transparent;
     color: red;
     margin-left: 10px;
+}
+
+#btnmobilemenu {
+    display: none;
+}
+
+.navBarMobile {
+    display: none;
 }
 
 @media(max-width:500px) {
@@ -88,7 +105,57 @@
     }
 
     .btn-area-header {
-        gap: 15px
+
+        display: none;
+    }
+
+    .userinfo {
+        display: none;
+    }
+
+    #btnmobilemenu {
+        display: block;
+        position: absolute;
+        right: 20px;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    .navBarMobileshow {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: #fff;
+        padding: 20px;
+        position: fixed;
+        width: 100%;
+        height: 50vh;
+        left: 0;
+        bottom: 0;
+        background-color: #2d2d2d;
+        animation: show 1s ease;
+        overflow: hidden;
+    }
+
+    @keyframes show {
+        0% {
+            height: 0vh;
+        }
+
+        100% {
+            height: 50vh;
+        }
+    }
+
+    .navBarMobile label {
+        font-size: 25px;
+    }
+
+    .navBarMobile button {
+        background-color: transparent;
+        color: #fff;
+        font-size: 20px;
+        margin-top: 1rem;
     }
 }
 
