--- a/src/Pages/Cadastro/style.css
+++ b/src/Pages/Cadastro/style.css
@@ -1,7 +1,7 @@
 .containercadastro {
     width: 100%;
     height: 100vh;
-    background-color: #1d1d1d;
+    background-color: #2d2d2d;
 }
 
 .box-area-form {
@@ -15,7 +15,7 @@
 .form {
     width: 400px;
     height: 500px;
-    background-color: #fff;
+    background-color: red;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -27,10 +27,10 @@
     width: 90%;
     height: 45px;
     border-radius: 10px;
-    border: 2px solid gray;
+    border: 0;
     padding-left: 5px;
     color: grey;
-    font-size: 18px;
+    font-size: 15px;
     outline: none;
 }
 
@@ -41,11 +41,41 @@
 .form p {
     width: 80%;
     text-align: center;
+    color: #fff;
 }
-.form button{
+
+.form button {
     width: 90%;
     height: 45px;
     background-color: #1d1d1d;
     color: #fff;
     font-size: 17px;
+    transition: 0.3s ease;
+}
+
+.form button:hover {
+    background-color: #2d2d2d;
+}
+
+.form a {
+    color: #fff;
+}
+
+#loadspan {
+    animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+        text-shadow: 4px 4px 10px #fff;
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
