--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-around;
     z-index: 2;
+    margin-bottom: 20px;
 }
 
 .logo {
@@ -65,7 +66,6 @@
     border: 0;
     color: white;
     cursor: pointer;
-
 }
 
 .userinfo {
@@ -95,7 +95,7 @@
     display: none;
 }
 
-@media(max-width:500px) {
+@media (max-width: 500px) {
     .login-area-user {
         display: none;
     }
@@ -105,7 +105,6 @@
     }
 
     .btn-area-header {
-
         display: none;
     }
 
@@ -149,17 +148,36 @@
 
     .navBarMobile label {
         font-size: 25px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        color: silver;
+        width: 100%;
     }
 
-    .navBarMobile button {
-        background-color: transparent;
+    .navBarMobile .btnloginandcadastro {
         color: #fff;
         font-size: 20px;
         margin-top: 1rem;
+        background: none;
+    }
+
+    .navBarMobile .btnmobile {
+        background-color: red;
+        color: #fff;
+        font-size: 20px;
+        margin-top: 1rem;
+        width: 50%;
+        height: 35px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
     }
 }
 
-@media(max-width:400px) {
+@media (max-width: 400px) {
     .btn-area-header {
         gap: 9px;
     }
