--- a/src/Pages/Serie/serie.css
+++ b/src/Pages/Serie/serie.css
@@ -78,9 +78,9 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 80%;
+    width: 90%;
     color: white;
-    gap: 20px;
+    gap: 10px;
 }
 
 .info-text h3 {
@@ -108,12 +108,54 @@
     height: 30px;
     border: 0;
     border-radius: 10px;
-    
+
 }
 
-@media(max-width:500px){
-    .info-text{
+.boxinfoplayers {
+    position: relative;
+    transition: all 0.4s ease;
+
+}
+
+.boxinfoplayers .textinfoplayer {
+    display: none;
+    position: absolute;
+    width: 400px;
+    height: auto;
+    padding: 20px;
+    background-color: #ffffffa9;
+    color: #2d2d2d;
+    border-radius: 10px;
+    margin-top: 10px;
+    backdrop-filter: blur(10px);
+}
+
+.boxinfoplayers button {
+    background-color: red;
+    padding: 10px;
+    color: #fff;
+    border-radius: 10px;
+}
+
+@media(max-width:500px) {
+    .info-text {
         text-align: center;
         align-items: center;
     }
+
+    .boxPlayers {
+        flex-direction: column;
+    }
+
+    .boxinfoplayers {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .boxinfoplayers .textinfoplayer {
+        width: 100%;
+
+    }
+
 }
